# kedarium-engine

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Main.cpp
include/Kedarium/: Camera.hpp  Color.hpp  Core.hpp  File.hpp  Graphics.hpp  Image.hpp  Light.hpp  Solids.hpp  Window.hpp
resources/Shaders/: colored.frag  colored.vert  default.frag  default.vert  light.frag  light.vert
src/: CMakeLists.txt  Camera.cpp  Color.cpp  Core.cpp  File.cpp  Graphics.cpp  Image.cpp  Light.cpp  Main.cpp  Solids.cpp  Window.cpp
